[package]
name = "raydium-contract-instructions"
version = "0.1.0"
edition = "2021"


[dependencies]
solana-program = { git = "https://github.com/yihau/solana.git", version = "2.1.0", rev = "82024a70a05fedc09d7f0f5ee11d4203ed685e41" }
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.2", features = [
    "no-entrypoint",
] }
thiserror = "^1.0.63"
ahash = "=0.8.6"
